# fast-kernels

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_request.yml  bug_report.yml
.github/workflows/: ci.yml  gpu-manual.yml
benchmarks/baselines/: README.md
benchmarks/runners/: README.md
benchmarks/shapes/: decode_linear_w4a16.toml  inference_core.toml
benchmarks/suites/: clustered_page_decode.toml  decode_linear_w4a16.toml  prefix_union_decode.toml  rdkng_block.toml  rdkng_training.toml  template_gemm.toml
csrc/bindings/: python_module.cpp
csrc/include/fast_kernels/: version.h
csrc/kernels/clustered_page_decode/: clustered_page_decode.cu
csrc/kernels/decode_quant_linear/: README.md  arc_w4a16.cu
csrc/kernels/prefix_union_decode/: prefix_union_decode.cu
csrc/kernels/rdkng/: explicit_sketch.cu
csrc/kernels/template/: noop.cu
csrc/ops/: README.md
csrc/ops/clustered_page_decode/: clustered_page_decode.h
csrc/ops/decode_quant_linear/: README.md  arc_w4a16.h
csrc/ops/prefix_union_decode/: prefix_union_decode.h
csrc/ops/rdkng/: explicit_sketch.h
docker/: dev.Dockerfile
docs/: adding-a-kernel.md  development.md  index.md  methodology.md
src/fast_kernels/: __init__.py  __main__.py  env.py  native.py  paths.py
src/fast_kernels/benchmarking/: __init__.py  clustered_page_decode.py  decode_linear_w4a16.py  prefix_union_decode.py  rdkng.py  runner.py  suites.py
src/fast_kernels/cli/: main.py
src/fast_kernels/ops/: __init__.py  clustered_page_decode.py  decode_quant_linear.py  prefix_union_decode.py  rdkng.py
src/fast_kernels/registry/: __init__.py  baselines.py  kernels.py
src/fast_kernels/reporting/: __init__.py  artifacts.py  markdown.py  plots.py
src/fast_kernels/schemas/: __init__.py  results.py  suite.py
tests/cpu_smoke/: test_import.py
tests/gpu/: test_clustered_page_decode.py  test_cuda_placeholder.py  test_decode_quant_linear.py  test_prefix_union_decode.py  test_rdkng.py
tests/python/: test_cli.py  test_decode_benchmark.py  test_rdkng_benchmark.py  test_suites.py
tests/reporting/: test_artifacts.py
