[build-system]
requires = [
  "pybind11>=3.0.0,<4",
  "scikit-build-core>=0.12.2,<0.13",
]
build-backend = "scikit_build_core.build"

[project]
name = "fast-kernels"
version = "0.1.0"
description = "Benchmark-first CUDA kernel experiments for inference and general GPU workloads."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "matplotlib>=3.10,<4",
  "pydantic>=2.11,<3",
  "rich>=14.0,<15",
]

[project.optional-dependencies]
benchmark = [
  "torch>=2.11,<2.12",
]

[project.scripts]
fk = "fast_kernels.cli.main:main"

[dependency-groups]
dev = [
  "build>=1.3,<2",
  "mypy>=1.18,<2",
  "pybind11>=3.0.0,<4",
  "pre-commit>=4.3,<5",
  "pytest>=9.0,<10",
  "pytest-cov>=7.0,<8",
  "ruff>=0.14,<0.15",
]

[tool.uv]
default-groups = ["dev"]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "out/build/{wheel_tag}"
editable.mode = "redirect"
sdist.include = [
  "CMakeLists.txt",
  "CMakePresets.json",
  "benchmarks",
  "csrc",
  "docker",
  "src",
  "tests",
]
wheel.packages = ["src/fast_kernels"]
cmake.args = ["-DFK_ENABLE_CUDA=ON"]
cmake.build-type = "Release"
cmake.version = ">=4.2"

[tool.pytest.ini_options]
addopts = "--cov=fast_kernels --cov-report=term-missing"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["fast_kernels"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = ["src"]
packages = ["fast_kernels"]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["matplotlib", "matplotlib.*", "torch", "torch.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "N",
  "UP",
  "W",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
